# openni2_user_selection

./: CMakeLists.txt  NiTE.ini  README.md  mainpage.dox  manifest.xml
src/: main.cpp  userSelector.cpp  userSelector.h  userViewer.cpp  userViewer.h
